--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
 	"dependencies": {
 		"@material-tailwind/react": "^1.4.2",
 		"ag-grid-community": "29.1.0",
-		"ag-grid-enterprise": "29.1.0",
 		"ag-grid-react": "29.1.0",
 		"axios": "^1.3.4",
-		"prop-types": "^15.7.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-lazy-blur-image": "^0.1.2",
-		"react-responsive": "^9.0.2"
+		"@tanstack/react-query": "4.26.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
