--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-lazy-blur-image": "^0.1.2",
-		"@tanstack/react-query": "4.26.1"
+		"@tanstack/react-query": "4.26.1",
+		"@tanstack/react-query-devtools": "4.26.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
